Updated code with new algorithms